Tested put request with express

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="text-align: center">
     <h1>Testing Post Requests with Node and Express</h1>
-    <form onsubmit="" method="post" action="/login">
+    <form onsubmit="" method="post" action="/api/request/post">
       <input type="text" id="input-box" name="name" />
       <button type="submit">Send Data</button>
     </form>
